--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,14 +1,16 @@
 .slider {
-    position: relative;
+    // position: relative;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 50px;
 }
 .images {
     width: 1000px;
-    height: 600px;
+    max-height: 600px;
     border-radius: 10px;
+    z-index: auto;
 }
 
 .rightArrow {
