--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,5 +1,5 @@
 .slider {
-    // position: relative;
+    position: relative;
     height: 100vh;
     display: flex;
     justify-content: center;
