--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,10 +2,9 @@
 
 
 nav {
-display: flex;
+display: inline-block;
 align-items: center;
 justify-content: space-around;
 padding-top: 50px;
 font-size: larger;
-
 }
