--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,6 +6,11 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    padding:  10px;
+
+    img:hover {
+        transform: scale(1.5);
+      }
 }
 
 .Card_Content{
