--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans");
 
 
-nav {
-display: inline-block;
-align-items: center;
-justify-content: space-around;
-padding-top: 50px;
-font-size: larger;
+.container {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.Navbar_item {
+    font-size: larger;
+    font: 30px sans-serif;
+    color: green;
 }
